2011-04-01  Darin Adler  <darin@apple.com>

        Removed some more executable bits from files that don't need them.
        These often creep in when someone is working on Windows, which uses
        executable bits differently from Unix systems.

        * editing/execCommand/align-in-span.html: Removed property svn:executable.
        * editing/selection/extend-byline-withfloat.html: Removed property svn:executable.
        * fast/canvas/webgl/data-view-test.html: Removed property svn:executable.
        * fast/canvas/webgl/resources/gray-ramp-default-gamma.png: Removed property svn:executable.
        * fast/canvas/webgl/resources/gray-ramp-gamma0.1.png: Removed property svn:executable.
        * fast/canvas/webgl/resources/gray-ramp-gamma1.0.png: Removed property svn:executable.
        * fast/canvas/webgl/resources/gray-ramp-gamma2.0.png: Removed property svn:executable.
        * fast/canvas/webgl/resources/gray-ramp-gamma4.0.png: Removed property svn:executable.
        * fast/canvas/webgl/resources/gray-ramp-gamma9.0.png: Removed property svn:executable.
        * fast/canvas/webgl/resources/gray-ramp.png: Removed property svn:executable.
        * fast/canvas/webgl/resources/zero-alpha.png: Removed property svn:executable.
        * fast/css/inline-element-line-break.html: Removed property svn:executable.
        * fast/css/pseudo-element-line-break.html: Removed property svn:executable.
        * fast/dom/HTMLScriptElement/async-inline-script-expected.txt: Removed property svn:executable.
        * fast/dom/HTMLScriptElement/async-onbeforeload-expected.txt: Removed property svn:executable.
        * fast/dom/HTMLScriptElement/async-write-expected.txt: Removed property svn:executable.
        * fast/dom/HTMLScriptElement/defer-inline-script-expected.txt: Removed property svn:executable.
        * fast/events/before-unload-remove-and-add-subframe.html: Removed property svn:executable.